--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <img class="img-fluid" src="images/portfolio/05-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Eva Liu Website</h4>
+              <h4>Personal Website</h4>
               <p class="text-muted">Website Design</p>
             </div>
           </div>
@@ -281,12 +281,12 @@
 			</div>	<br />
 			<div class = "col-6"> 
 						<br /><br />
-				<strong>Email:</strong> wenyul@sfu.ca <br />
-				                        evaliu2046@gmail.com <br/>
-				<strong>Phone:</strong> +1-778-990-9726<br />
-				<strong>Website:</strong> http://www.sfu.ca/~wenyul <br />
-				<strong>Linkedin:</strong> https://www.linkedin.com/in/eva-liu-1820b812a <br />
-				<strong>Address:</strong> 2575 Norcrest Ct, Burnaby, BC, Canada <br />
+				<strong>Email:</strong> <p style="text-align:left">evaliu2046@gmail.com </p>
+				<strong>Phone:</strong> <p style="text-align:left">+1-778-990-9726 </p>
+				<strong>Website:</strong> <p style="text-align:left"><a href="http://www.evaliu.net" style="color: white">http://www.evaliu.net </a> </p>
+				<strong>Github:</strong> <p style="text-align:left"><a href="https://github.com/evaliu2046" style="color: white">https://github.com/evaliu2046 </a></p>
+				<strong>Linkedin:</strong> <p style="text-align:left"><a href="https://www.linkedin.com/in/evaliu2046" style="color: white"> https://www.linkedin.com/in/evaliu2046 </a></p>
+				<strong>Address:</strong> <p style="text-align:left">2575 Norcrest Ct, Burnaby, BC, Canada </p><br />
 				<br /><br />              
 			</div>
 			<div class = "col-3">                     
