--- a/p2_web.html
+++ b/p2_web.html
@@ -46,7 +46,9 @@
 			Bootstrap rol-class to separate each section inside CSS file;</br>
 
 			Included JavaScript function to make the navigation bar scroll down to section by itself,
-			 tested all pages by putting them online; </br></br></br>
+			 tested all pages by putting them online; </br></br>
+			 
+			You can find all the source code in my <a href="https://github.com/evaliu2046/Personal_Website">Github page</a>.<br /></br>
 		 </p>
 			<a href="index.html" style="text-decoration:none">Links to the Website</a>
 		</div>
