--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div id="top">
     <header class="masthead">
       <div class="container">
-        <div class="intro-text">
+        <div class="intro-text animated fadeInRight">
           <div class="intro-heading">Hi<font color="#e55e58">,</font> I'm Eva Liu<font color="#e55e58">.</font></div>
           <div class="intro-lead-in">Architecture Co-Verification Engineer at Microchip.</div>
         </div>
@@ -71,7 +71,7 @@
     <!-- Page Content: About Me -->
 	<div id = "aboutme-session">
     <section class="py-5">
-      <div class="container">
+      <div class="container animated fadeInRight">
         <h1>About Me</h1>
         <p> <br />Engineering isn't about coding programs and wiring electronics. 
 					Engineering is to design, to create, to provide solutions for a better life. It is to think <font color="#e55e58">beyond the expectation</font>
@@ -281,12 +281,12 @@
 			</div>	<br />
 			<div class = "col-6"> 
 						<br /><br />
-				<strong>Email:</strong> <p style="text-align:left">evaliu2046@gmail.com </p>
-				<strong>Phone:</strong> <p style="text-align:left">+1-778-990-9726 </p>
-				<strong>Website:</strong> <p style="text-align:left"><a href="http://www.evaliu.net" style="color: white">http://www.evaliu.net </a> </p>
-				<strong>Github:</strong> <p style="text-align:left"><a href="https://github.com/evaliu2046" style="color: white">https://github.com/evaliu2046 </a></p>
-				<strong>Linkedin:</strong> <p style="text-align:left"><a href="https://www.linkedin.com/in/evaliu2046" style="color: white"> https://www.linkedin.com/in/evaliu2046 </a></p>
-				<strong>Address:</strong> <p style="text-align:left">2575 Norcrest Ct, Burnaby, BC, Canada </p><br />
+				<strong>Email:</strong> <br/>evaliu2046@gmail.com <br/>
+				<strong>Phone:</strong> <br/>+1-778-990-9726 <br/>
+				<strong>Website:</strong> <br/><a href="http://www.evaliu.net" style="color: white">http://www.evaliu.net </a> <br/>
+				<strong>Github:</strong> <br/><a href="https://github.com/evaliu2046" style="color: white">https://github.com/evaliu2046 </a><br/>
+				<strong>Linkedin:</strong> <br/><a href="https://www.linkedin.com/in/evaliu2046" style="color: white"> https://www.linkedin.com/in/evaliu2046 </a><br/>
+				<strong>Address:</strong> <br/>2575 Norcrest Ct, Burnaby, BC, Canada <br/><br />
 				<br /><br />              
 			</div>
 			<div class = "col-3">                     
