--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
     <!-- Page Content: About Me -->
 	<div id = "aboutme-session">
     <section class="py-5">
-      <div class="container animated fadeInRight">
-        <h1>About Me</h1>
-        <p> <br />Engineering isn't about coding programs and wiring electronics. 
-					Engineering is to design, to create, to provide solutions for a better life. It is to think <font color="#e55e58">beyond the expectation</font>
-					and define the future.
-				     	That is why I look further for every project I did, think the connections between technology and application, propose different 
-				approaches and optimize my work by thousands of testing. </br></br>
-					I believe <font color="#e55e58">self-learning</font> is the key to succeeding. 
-					I'm always keen to obtain new knowledge and get myself on top of required skills in a short time. Moreover, I tend to learn more about what I am interested, 
-				combine the knowledge from different related areas and complete projects to practice new learning.
-					All in all, I'm always <font color="#e55e58">motivated to explore</font> and create the world using my intelligence.</br></br>
-        </p>
-      </div>
+      <div class="container">
+	  <h1>About Me</h1>
+			<p> <br />Engineering isn't about coding programs and wiring electronics. 
+						Engineering is to design, to create, to provide solutions for a better life. It is to think <font color="#e55e58">beyond the expectation</font>
+						and define the future.
+							That is why I look further for every project I did, think the connections between technology and application, propose different 
+					approaches and optimize my work by thousands of testing. </br></br>
+						I believe <font color="#e55e58">self-learning</font> is the key to succeeding. 
+						I'm always keen to obtain new knowledge and get myself on top of required skills in a short time. Moreover, I tend to learn more about what I am interested, 
+					combine the knowledge from different related areas and complete projects to practice new learning.
+						All in all, I'm always <font color="#e55e58">motivated to explore</font> and create the world using my intelligence.</br></br>
+			</p>
+	  </div>
 	  
 	  </br>
 	  
 	  <div class="container">
 	  <div class="row">
-		<div class="col-6">
+		<div class="col-md-6 col-sm-6">
 			<p> 
 						•	<strong>C/C++:</strong> Object-oriented Programing, with the knowledge of firmware development.</br>
 						•	<strong>Python, Java:</strong> scripting languages for system level automation development. </br>
@@ -97,7 +97,7 @@
 			</p>
 		</div>
 		
-		<div class="col-6">
+		<div class="col-md-6 col-sm-6">
 			<p> 
 						•	<strong>Network knowledge:</strong> Network Lab Hands-on work experience.</br>
 						•	<strong>Python, Java:</strong> scripting languages for system level automation development. </br>
@@ -118,11 +118,11 @@
       <div class="container">
 	  <h1>Experience</h1>
 		  <div class="row">
-		    <div class="col-3">
+		    <div class="col-3 col-md-1 col-sm-1">
 			<br/>
 
 			</div>
-			<div class="col-9">
+			<div class="col-9 col-md-11 col-sm-11">
 				<p> <div class = "experience-header"> <br/>2018. Dec - Present, Architecture Co-Verification Engineer, Microchip</br> </div>
 						•	Develop, execute and document a series of feature tests that will fully validate the operation of the SoC as part of the overall product. </br>
 						•	Build intended use model system solutions and utilize them in end to end system level testing. </br>
@@ -133,12 +133,12 @@
 		  
 		  <br/>
 		  <div class="row">
-			<div class="col-3">
+			<div class="col-3 col-md-1 col-sm-1">
 			<br/>
 
 			</div>
 			
-			<div class="col-9">
+			<div class="col-9 col-md-11 col-sm-11">
 				<p> <div class = "experience-header"> <br/>2017. Sep – 2018. Dec, Architecture Co-Verification Engineer Co-Op, Microsemi </br> </div>
 						•	Wrote enhanced test cases based on current RTL design using Embedded C, Python and mbs, completed the basic functionality tests for multiple subsystems. </br>
 						•	Analyzed test errors based on the test results, then grouped the tests by similar failing cases, and reported the errors to Product Design team for future investigate. </br>
@@ -151,11 +151,11 @@
 		  
 		  </br>
 		  <div class="row">
-		    <div class="col-3">
+		    <div class="col-3 col-md-1 col-sm-1">
 			<br/>
 
 			</div>
-			<div class="col-9">
+			<div class="col-9 col-md-11 col-sm-11">
 				<p> <div class = "experience-header"> <br/>2015. Apr - 2015. Aug, SQL Database Tester, XJ Traction CORPORATION</br> </div>
 						•	Helped maintain new software platform by debugging errors in a daily base and partially completed production department software system transformation. </br>
 						•	Collected software testing problems from different manufacturing departments, analyzed the causes of all problems and proposed solutions to software developers.</br>
