--- a/p2_web.html
+++ b/p2_web.html
@@ -24,7 +24,7 @@
                                        
 			</div>
 			<div class = "col-10">
-				</br><img src ="images/p2_web.png" alt="coding Icon" width="100%" height="auto" align="middle">
+				</br><img src ="images/website.png" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
 			<div class = "col-1">
                                        
