--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
+            <a class="portfolio-link" href="p3_selfdriving_car.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-plus fa-3x"></i>
@@ -216,12 +216,12 @@
               <img class="img-fluid" src="images/portfolio/03-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>xxx</h4>
-              <p class="text-muted">Identity</p>
+              <h4>Self Driving Cars</h4>
+              <p class="text-muted">Python Machine Learning Script, AWS EC2</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
+            <a class="portfolio-link" href="p4_monitor.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-plus fa-3x"></i>
@@ -230,12 +230,12 @@
               <img class="img-fluid" src="images/portfolio/04-thumbnail.jpg" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>xxx</h4>
-              <p class="text-muted">Branding</p>
+              <h4>System Monitor</h4>
+              <p class="text-muted">C++ OOP Programing</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" href="p2_web.html">
+            <a class="portfolio-link" href="p5_web.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-plus fa-3x"></i>
@@ -249,7 +249,7 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" href="p3_photo.html">
+            <a class="portfolio-link" href="p6_photo.html">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-plus fa-3x"></i>
@@ -281,12 +281,12 @@
 			</div>	<br />
 			<div class = "col-6"> 
 						<br /><br />
-				<strong>Email:</strong> <br/>evaliu2046@gmail.com <br/>
-				<strong>Phone:</strong> <br/>+1-778-990-9726 <br/>
-				<strong>Website:</strong> <br/><a href="http://www.evaliu.net" style="color: white">http://www.evaliu.net </a> <br/>
-				<strong>Github:</strong> <br/><a href="https://github.com/evaliu2046" style="color: white">https://github.com/evaliu2046 </a><br/>
-				<strong>Linkedin:</strong> <br/><a href="https://www.linkedin.com/in/evaliu2046" style="color: white"> https://www.linkedin.com/in/evaliu2046 </a><br/>
-				<strong>Address:</strong> <br/>2575 Norcrest Ct, Burnaby, BC, Canada <br/><br />
+				<strong>Email:</strong> evaliu2046@gmail.com <br/>
+				<strong>Phone:</strong> +1-778-990-9726 <br/>
+				<strong>Website:</strong> <a href="http://www.evaliu.net" style="color: white">http://www.evaliu.net </a> <br/>
+				<strong>Github:</strong>  <a href="https://github.com/evaliu2046" style="color: white">https://github.com/evaliu2046 </a><br/>
+				<strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/evaliu2046" style="color: white"> https://www.linkedin.com/in/evaliu2046 </a><br/>
+				<strong>Address:</strong> 2575 Norcrest Ct, Burnaby, BC, Canada <br/><br />
 				<br /><br />              
 			</div>
 			<div class = "col-3">                     
