Update personal website

--- a/p6_photo.html
+++ b/p6_photo.html
@@ -1,10 +1,15 @@
 <!doctype html>
 
-<html>
+<html lang="en">
 
 <head>
-<title>Project 6-Photography</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
+	<title>Photography</title>
+    <link rel="shortcut icon" href="images/eliu.png" />
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -22,13 +27,13 @@
 </br>
 <div class = "container">
 	<div class= "row">
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
                 </br><img id="myImg" onclick="onClick(this)" src ="images/photography/p0.jpg" alt="Sky View" width="100%" height="auto" align="middle"> 
 			</div>
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
 				</br><img id="myImg" onclick="onClick(this)" src ="images/photography/p5.jpg" alt="World Trade Centre" width="100%" height="auto" align="middle">
 			</div>
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
                 </br><img id="myImg" onclick="onClick(this)" src ="images/photography/p6.jpg" alt="Lions Gate Bridge" width="100%" height="auto" align="middle">		
 			</div>
     </div> </br></br>
@@ -41,33 +46,31 @@
 		<div class= "descr">
 		<p>
 			In my free time, I love to explore the world, I record my journey with camera. It has always been my favorie thing to do;</br>
-			Besides, I have a big crash on outdoor activities as well. I love hiking, snow-walking, swimming, any kind of ways to feel the nature;</br>
-			In the past three years, I have been to Japan, US and Couple cities in Canada. And I will keep exploring the new places in the future.</br>
-
-			 </br></br>
+			Besides, I have a big crash on outdoor activities as well. I love hiking, snow-walking, swimming, any kind of ways to feel the nature;</br></br>
+			All the photos displayed in this page are stored using AWS S3 bucket.</br>
 		 </p>
 	</div>
 	
 	<div class= "row">
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
                 </br><img id="myImg" onclick="onClick(this)" src ="images/photography/p7.jpg" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
 				</br><img id="myImg" onclick="onClick(this)" src ="images/photography/p9.jpg" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
                 </br><img id="myImg" onclick="onClick(this)" src ="images/photography/p8.jpg" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
     </div> </br></br>
 	
 		<div class= "row">
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
                 </br><img id="myImg" onclick="onClick(this)" src ="images/photography/p3.jpg" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
 				</br><img id="myImg" onclick="onClick(this)" src ="images/photography/p1.jpg" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
-			<div class = "col-4">
+			<div class = "col-md-4 col-sm-6">
                 </br><img id="myImg" onclick="onClick(this)" src ="images/photography/p2.jpg" alt="coding Icon" width="100%" height="auto" align="middle">
 			</div>
     </div> </br></br>
