--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
 						<br /><br />
 				<strong>Email:</strong> evaliuinfo@gmail.com <br/>
 				<strong>Phone:</strong> +1-778-990-9726 <br/>
-				<strong>Website:</strong> <a href="http://www.evaliu.net" style="color: white">http://www.evaliu.info </a> <br/>
-				<strong>Github:</strong>  <a href="https://github.com/evaliuinfo" style="color: white">https://github.com/evaliu2046 </a><br/>
-				<strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/evaliuinfo" style="color: white"> https://www.linkedin.com/in/evaliu2046 </a><br/>
+				<strong>Website:</strong> <a href="http://www.evaliu.info" style="color: white">http://www.evaliu.info </a> <br/>
+				<strong>Github:</strong>  <a href="https://github.com/evaliuinfo" style="color: white">https://github.com/evaliuinfo </a><br/>
+				<strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/evaliuinfo" style="color: white"> https://www.linkedin.com/in/evaliuinfo </a><br/>
 				<strong>Address:</strong> 2575 Norcrest Ct, Burnaby, BC, Canada <br/><br />
 				<br /><br />              
 			</div>
