--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
 				<strong>Phone:</strong> +1-778-990-9726 <br/>
 				<strong>Website:</strong> <a href="http://www.evaliu.info" style="color: white">http://www.evaliu.info </a> <br/>
 				<strong>Github:</strong>  <a href="https://github.com/evaliuinfo" style="color: white">https://github.com/evaliuinfo </a><br/>
-				<strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/evaliuinfo" style="color: white"> https://www.linkedin.com/in/evaliuinfo </a><br/>
-				<strong>Address:</strong> 2575 Norcrest Ct, Burnaby, BC, Canada <br/><br />
+				<strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/evaliuinfo" style="color: white"> https://www.linkedin.com/in/evaliuinfo </a><br/><br />
 				<br /><br />              
 			</div>
 			<div class = "col-md-3 col-sm-1">                     
