--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
               <a class="nav-link" href="#aboutme-session">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#certificate-session">Certificate</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#experience-session">Experience</a>
             </li>
             <li class="nav-item">
@@ -68,50 +71,78 @@
         </div>
       </div>
     </header>
-	</div>
+  </div>
 
     <!-- Page Content: About Me -->
+  <div class="blue-colored-session">
 	<div id = "aboutme-session">
     <section class="py-5">
       <div class="container">
 	  <h1>About Me</h1>
       <p> <br />Engineering is to design, create and build a better solution to ease life. 
-            It is to think  <font color="#e55e58">beyond expectation</font>, implement new technology to define the future.
-            That is the reason I believe <font color="#e55e58">Cloud Computing</font> is the key to future computing services and solutions. </br>
+            It is to think beyond expectation, implement new technology to define the future.
+            That is the reason I believe Cloud Computing is the key to future computing services and solutions. </br>
             I am concentrating on developing my cloud-computing skills by self-learning through online resources, 
-            and I am looking forward to build my career based on Cloud services. With my two-year industry-lead <font color="#e55e58">Storage Architecture</font> experience, 
-            I will implement cloud computing services in a more perspective vision. </br>
-            Currently, I am looking for opportunities in  <font color="#e55e58">Great Toronto</font> area.
+            and I am looking forward to build my career based on Cloud services. </br> </br>
+            
+            I believe, to be great is to be greater.
 						</br>
-			</p>
+      </p>
+      
+      <div class="container">
+        <div class="row">
+        <div class="col-md-6 col-sm-6">
+              <p> 
+                    •	<strong>C/C++:</strong> Object-oriented Programing, firmware development and debugging.</br>
+                    •	<strong>Python, Java:</strong> Scripting languages for test automation, and test work-flow development. </br>
+                    •	<strong>Storage Networking:</strong> Large Scale of storage servers with SAN networking, knowledge of Storage Architecture. </br>
+              </p>
+            </div>
+            <div class="col-md-6 col-sm-6">
+              <p> 
+                    •	<strong>AWS-EC2, S3, CloudFormation:</strong> Cloud Storage, computing services with AWS CLI command operation.</br>
+                    • <strong>Shell, Bash:</strong> Linux based command line scripting languages, worked with automating process through Bash script. </br>
+                    • <strong>Team Work:</strong> Jira, Confluence, daily scrum work-flow, experiences with cross-team communication. </br>
+              </p>
+        </div>
+        </div>
+        </div>
 	  </div>
-	  
 	  </br>
 	  
-	  <div class="container">
-	  <div class="row">
-		<div class="col-md-6 col-sm-6">
-			<p> 
-						•	<strong>C/C++:</strong> Object-oriented Programing, firmware development and debugging.</br>
-            •	<strong>Python, Java:</strong> Scripting languages for test automation, and test work-flow development. </br>
-            •	<strong>Storage Networking:</strong> Large Scale of storage servers with SAN networking, knowledge of Storage Architecture. </br>
-			</p>
-		</div>
-		
-		<div class="col-md-6 col-sm-6">
-			<p> 
-						•	<strong>AWS-EC2, S3, CloudFormation:</strong> Cloud Storage, computing services with AWS CLI command operation.</br>
-						• <strong>Shell, Bash:</strong> Linux based command line scripting languages, worked with automating process through Bash script. </br>
-						• <strong>Team Work:</strong> Jira, Confluence, daily scrum work-flow, experiences with cross-team communication. </br>
-			</p>
-		</div>
-	  </div>
-	  </div>
-	  
-	  
     </section>
-	</div>
-	
+  </div>
+  </div>
+  
+    <!-- Page Content: Cloud Certificate -->
+	<div id = "certificate-session">
+    <section class="py-5">
+      <div class="container">
+        <h1>Certificate</h1>
+
+	    <div class="container">
+	    <div class="row">
+		  <div class="col-md-12 col-sm-12">
+			<p> <br/>
+          <strong>AWS Certified Solutions Architect – Professional</strong> </br> 
+          <font color="#6c757d" size="-0.3">Issued Jan 2021, Expires Jan 2024 </font> </br>
+          Design and deploy dynamically scalable, highly available, fault-tolerant, and reliable applications on AWS. Select appropriate AWS services to design and deploy an application based on given requirements</br>
+          </br>
+          <strong>AWS Certified SysOps Administrator – Associate</strong> </br>
+          <font color="#6c757d" size="-0.3">Issued Jun 2020, Expires Jun 2023 </font> </br>
+          Deploy, manage, and operate scalable, highly available, and fault-tolerant systems on AWS. Implement and control the flow of data to and from AWS</br>
+          </br>
+          <strong>AWS Certified Solutions Architect - Associate</strong> </br>
+          <font color="#6c757d" size="-0.3">Issued May 2020, Expires May 2023 </font> </br>
+          Effectively demonstrate knowledge of how to architect and deploy secure and robust applications on AWS technologies. Define a solution using architectural design principles based on customer requirements</br>
+        </p>
+		  </div>
+	    </div>
+	    </div>
+
+  </section>
+</div>
+
 	<!-- Page Content: Experience -->
 	<div class="colored-session">
 	<div id="experience-session">
