--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	
     <!-- Custom JavaScript for this template -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="javascript/jqSingleStory.js"></script>
     <script type="text/javascript" src="javascript/jqScrolling.js"></script>
     <script type="text/javascript">
     function text(url) {
